# pybackup

./: .gitignore  CLAUDE.md  LICENSE  ONBOARDING.md  README.md  install.sh  pyproject.toml  windows_context_menu.reg
docs/: plan_mistral.md
src/pybackup/: archiver.py  cli.py  config.py  exceptions.py
src/pybackup/backends/: base.py  local.py  rclone.py  s3.py  ssh.py
tests/: conftest.py  test_archiver.py  test_cli.py  test_config.py
tests/test_backends/: test_local.py
