[project]
name = "pybackup"
version = "0.1.0"
description = "Backup a file or folder to a destination (rclone, S3/MinIO, SSH)"
requires-python = ">=3.11"
dependencies = ["boto3"]

[project.scripts]
pybackup = "pybackup.cli:backup_entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pybackup"]
