[project]
name = "pybackup"
version = "0.1.0"
description = "Backup a file or folder to a destination (rclone, S3/MinIO, SSH)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
s3 = ["boto3"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[project.scripts]
pybackup = "pybackup.cli:backup_entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pybackup"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
